sfdx-source/main/objects/External_Nlp_Service_Setting__mdt/External_Nlp_Service_Setting__mdt.object-meta.xml
<CustomObject>
    <label>External Nlp Service Setting</label>
    <pluralLabel>External Nlp Service Settings</pluralLabel>
</CustomObject>