sfdx-source/main/objects/External_Nlp_Service_Setting__mdt/fields/Additional_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Additional_Parameters__c</fullName>
    <inlineHelpText>Comma separated values for additional settings (e.g. sessionId=12345,verbose=true,...)</inlineHelpText>
    <label>Additional Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>