sfdx-source/main/objects/External_Nlp_Service_Setting__mdt/fields/External_Nlp_Service_Definition__c.field-meta.xml
<CustomField>
    <fullName>External_Nlp_Service_Definition__c</fullName>
    <label>External Nlp Service Definition</label>
    <referenceTo>External_Nlp_Service_Definition__mdt</referenceTo>
    <relationshipLabel>External Nlp Service Settings</relationshipLabel>
    <relationshipName>External_Nlp_Service_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>