sfdx-source/main/objects/External_Nlp_Service_Setting__mdt/fields/Intent_Confidence_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Intent_Confidence_Threshold__c</fullName>
    <label>Intent Confidence Threshold</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>