sfdx-source/main/objects/External_Nlp_Service_Setting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EINSTEIN_AI</fullName>
                <default>true</default>
                <label>EINSTEIN_AI</label>
            </value>
            <value>
                <fullName>DIALOG_FLOW</fullName>
            </value>
            <value>
                <fullName>WIT_AI</fullName>
            </value>
            <value>
                <fullName>WATSON</fullName>
            </value>
            <value>
                <fullName>LUIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>